--- a/think up1.html
+++ b/think up1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -6,12 +5,12 @@
   <title>think up</title>
   <style>
     body {
-  font-family: 'cairo', sans-serif;
+  font-family: 'Cooper Black', sans-serif;
   background: url("BackGround.png") no-repeat center center fixed;
   background-size: cover;
   text-align: center;
   direction: rtl;
-  font-size: 22px;
+  font-size: 25px;
   position: relative;
   z-index: 0;
 }
@@ -32,26 +31,26 @@ body::before {
       margin: 10px; padding: 10px 20px;
       background-color: #800020; color: white;
       border: none; border-radius: 10px;
-      font-size: 20px; cursor: pointer;
+      font-size: 20px; cursor: pointer;font-family:"Cooper Black";
     }
     .tab-button:hover { background-color: #800020; }
     .questions { display: none; margin-top: 30px; }
-    .question {
-      background-color:rgba(255,255,255,0.1); padding: 20px;
+    .question {font-family:"Cooper Black";font-size:35px;
+      background-color:rgba(255,255,255,0.4); padding: 20px;
       margin: auto; width: 80%; border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       display: none;
     }
     .question.active { display: block; }
-    .answers button {
+    .answers button {font-family:"CooperBlack";font-size:20px;
       margin: 5px; padding: 10px 15px;
       background-color: #800020;
       border: none; border-radius: 8px;
       cursor: pointer;
     }
-    .answers button:hover { background-color: #ff8c42; }
+    .answers button:hover { background-color: #ff8c42;font-family:"CooperBlack";font-weight:bold;font-size:40px }
     .score-board {
-      margin-top: 20px; font-size: 30px;
+      margin-top: 20px; font-size: 40px;
       color: #ff6a3d; font-weight: bold;
     }
     img.icon { width: 200px; }
